--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -34,6 +34,7 @@
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
       <Label fx:id="deadline" styleClass="cell_small_label" text="\$deadline" />
       <Label fx:id="goal" styleClass="cell_small_label" text="\$goal" />
+      <Label fx:id="remark" styleClass="cell_small_label" text="$remark" />
     </VBox>
   </GridPane>
 </HBox>
